--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Solaro</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/index.js" defer></script>
