Added some touches to positioning and navigation

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             <ul>
                 <li>
                     <a href="/"><img class="icon" src="images/home.svg" alt="Domov"></a>
+                    <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
                     <a href="#"><img class="icon active" src="images/radar.svg" alt="Radar"></a>
+                    <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
                     <a href="#"><img class="icon" src="images/analytics.svg" alt="Status"></a>
+                    <div class="tooltip-div"><p class="tooltip">Status</p></div>
                 </li>
             </ul>
         </nav>
