--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Solaro</h1>
+    <img id="switch" src="images/moon.svg" alt="Change mode">
     <main>
         <div id="renderer">
             <!-- <canvas id="canvas" width="650px" height="650px" style="cursor: grab;"> -->
