--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Solaro</h1>
     <img id="switch" src="images/moon.svg" alt="Change mode">
+    <div class="blue rect"></div>  
+    <div class="light_blue rect"></div>
+    <div class="light_green rect"></div>
+    <div class="green rect"></div>
     <main>
         <div id="renderer">
             <!-- <canvas id="canvas" width="650px" height="650px" style="cursor: grab;"> -->
