--- a/public/radar.html
+++ b/public/radar.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Solaro</title>
+    <title>Solaro - Radar</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index.css">
-    <script type="module" src="js/theme.js" defer></script>
+    <link rel="stylesheet" href="css/radar.css">
+    <script type="module" src="js/radar.js" defer></script>
 </head>
 <body>
-    <h1 id="title">Solaro</h1>
+    <h1 id="title">Radar</h1>
     <img id="switch" src="images/moon.svg" alt="Change mode">
     <div id="nav_div">
         <nav>
             <ul>
                 <li>
-                    <a href="/"><img class="icon active" src="images/home.svg" alt="Domov"></a>
+                    <a href="/"><img class="icon" src="images/home.svg" alt="Domov"></a>
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
-                    <a href="radar.html"><img class="icon" src="images/radar.svg" alt="Radar"></a>
+                    <a href="#"><img class="icon active" src="images/radar.svg" alt="Radar"></a>
                     <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
@@ -33,14 +33,11 @@
     <div class="blue rect"></div>  
     <div class="light_blue rect"></div>
     <div class="light_green rect"></div>
-    <div class="green rect"></div>    
+    <div class="green rect"></div>
     <main>
-        <img class="showcase_img" src="images/solaro-prototype.png" alt="Fotka prototypu vysávača">
-        <p class="showcase_text">
-            Solaro je inteligentný vysávač na solárny pohon.
-            Určený najmä pre použitie v exteriéri.
-            Ale je ho možné použiť aj v interiéri.
-        </p>
+        <div id="renderer">
+            <!-- <canvas id="canvas" width="650px" height="650px" style="cursor: grab;"> -->
+        </div>
     </main>    
 </body>
 </html>
