--- a/public/status.html
+++ b/public/status.html
@@ -6,17 +6,17 @@
     <meta name="robots" content="noindex, nofollow">
     <title>Solaro</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/status.css">
     <script type="module" src="js/theme.js" defer></script>
 </head>
 <body>
-    <h1 id="title">Solaro</h1>
+    <h1 id="title">Status</h1>
     <img id="switch" src="images/moon.svg" alt="Change mode">
     <div id="nav_div">
         <nav>
             <ul>
                 <li>
-                    <a href="/"><img class="icon active" src="images/home.svg" alt="Domov"></a>
+                    <a href="/"><img class="icon" src="images/home.svg" alt="Domov"></a>
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
@@ -24,7 +24,7 @@
                     <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
-                    <a href="status.html"><img class="icon" src="images/analytics.svg" alt="Status"></a>
+                    <a href="#"><img class="icon active" src="images/analytics.svg" alt="Status"></a>
                     <div class="tooltip-div"><p class="tooltip">Status</p></div>
                 </li>
             </ul>
@@ -35,12 +35,7 @@
     <div class="light_green rect"></div>
     <div class="green rect"></div>    
     <main>
-        <img class="showcase_img" src="images/solaro-prototype.png" alt="Fotka prototypu vysávača">
-        <p class="showcase_text">
-            Solaro je inteligentný vysávač na solárny pohon.
-            Určený najmä pre použitie v exteriéri.
-            Ale je ho možné použiť aj v interiéri.
-        </p>
+        <h1>Dostupné čoskoro!!!</h1>
     </main>    
 </body>
 </html>
