Fixed modularity of the project

--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>Solaro</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index.css">
-    <script type="module" src="js/theme.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script type="module" src="../js/theme.js" defer></script>
 </head>
 <body>
     <h1 id="title">Solaro</h1>
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/"><img class="icon active" src="images/home.svg" alt="Domov"></a>
+                    <a href="/"><img class="icon active" src="/images/home.svg" alt="Domov"></a>
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
