--- a/html/radar.html
+++ b/html/radar.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Solaro</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/status.css">
-    <script type="module" src="js/theme.js" defer></script>
+    <title>Solaro - Radar</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/radar.css">
+    <script type="module" src="../js/radar.js" defer></script>
 </head>
 <body>
-    <h1 id="title">Status</h1>
+    <h1 id="title">Radar</h1>
     <img id="switch" src="images/moon.svg" alt="Change mode">
     <div id="nav_div">
         <nav>
@@ -20,11 +20,11 @@
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
-                    <a href="radar.html"><img class="icon" src="images/radar.svg" alt="Radar"></a>
+                    <a href="#"><img class="icon active" src="images/radar.svg" alt="Radar"></a>
                     <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
-                    <a href="#"><img class="icon active" src="images/analytics.svg" alt="Status"></a>
+                    <a href="status.html"><img class="icon" src="images/analytics.svg" alt="Status"></a>
                     <div class="tooltip-div"><p class="tooltip">Status</p></div>
                 </li>
             </ul>
@@ -33,9 +33,11 @@
     <div class="blue rect"></div>  
     <div class="light_blue rect"></div>
     <div class="light_green rect"></div>
-    <div class="green rect"></div>    
+    <div class="green rect"></div>
     <main>
-        <h1>Dostupné čoskoro!!!</h1>
+        <div id="renderer">
+            <!-- <canvas id="canvas" width="650px" height="650px" style="cursor: grab;"> -->
+        </div>
     </main>    
 </body>
 </html>
