Added a new color Starry Yellow

--- a/html/radar.html
+++ b/html/radar.html
@@ -32,6 +32,7 @@
     </div>
     <div class="blue rect"></div>  
     <div class="light_blue rect"></div>
+    <div class="yellow rect"></div>
     <div class="light_green rect"></div>
     <div class="green rect"></div>
     <main>
