--- a/html/status.html
+++ b/html/status.html
@@ -32,8 +32,9 @@
     </div>
     <div class="blue rect"></div>  
     <div class="light_blue rect"></div>
+    <div class="yellow rect"></div>
     <div class="light_green rect"></div>
-    <div class="green rect"></div>    
+    <div class="green rect"></div> 
     <main>
         <h1>Dostupné čoskoro!!!</h1>
     </main>    
