--- a/html/radar.html
+++ b/html/radar.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <h1 id="title">Radar</h1>
-    <img id="switch" src="images/moon.svg" alt="Change mode">
+    <img id="switch" src="icons/sun-moon.svg" alt="Change mode">
     <div id="nav_div">
         <nav>
             <ul>
                 <li>
-                    <a href="/"><img class="icon" src="images/home.svg" alt="Domov"></a>
+                    <a href="/"><img class="icon" src="icons/dom.svg" alt="Domov"></a>
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
-                    <a href="#"><img class="icon active" src="images/radar.svg" alt="Radar"></a>
+                    <a href="#"><img class="icon active" src="icons/radar.svg" alt="Radar"></a>
                     <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
-                    <a href="status.html"><img class="icon" src="images/analytics.svg" alt="Status"></a>
+                    <a href="status.html"><img class="icon" src="icons/status.svg" alt="Status"></a>
                     <div class="tooltip-div"><p class="tooltip">Status</p></div>
                 </li>
             </ul>
