--- a/html/status.html
+++ b/html/status.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Solaro</title>
+    <title>Solaro - Status</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/status.css">
     <script type="module" src="../js/theme.js" defer></script>
 </head>
 <body>
     <h1 id="title">Status</h1>
-    <img id="switch" src="images/moon.svg" alt="Change mode">
+    <img id="switch" src="icons/sun-moon.svg" alt="Change mode">
     <div id="nav_div">
         <nav>
             <ul>
                 <li>
-                    <a href="/"><img class="icon" src="images/home.svg" alt="Domov"></a>
+                    <a href="/"><img class="icon" src="icons/dom.svg" alt="Domov"></a>
                     <div class="tooltip-div"><p class="tooltip">Domov</p></div>
                 </li>
                 <li>
-                    <a href="radar.html"><img class="icon" src="images/radar.svg" alt="Radar"></a>
+                    <a href="radar.html"><img class="icon" src="icons/radar.svg" alt="Radar"></a>
                     <div class="tooltip-div"><p class="tooltip">Radar</p></div>
                 </li>
                 <li>
-                    <a href="#"><img class="icon active" src="images/analytics.svg" alt="Status"></a>
+                    <a href="#"><img class="icon active" src="icons/status.svg" alt="Status"></a>
                     <div class="tooltip-div"><p class="tooltip">Status</p></div>
                 </li>
             </ul>
